fixed text align

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -8,7 +8,7 @@
 .menu-container {
   display: flex;
   justify-content: space-between;
-  padding: 1rem 0.5rem 0.5rem 0.5rem;
+  padding: 0.5rem;
 }
 
 .menu-card {
@@ -29,6 +29,7 @@
 
 .rows {
   justify-items: center;
+  text-align: center;
 }
 
 .menu-options {
@@ -36,4 +37,9 @@
   justify-content: center;
   padding: 0.5rem;
   align-items: center;
+}
+
+.legend {
+  font-weight: 600;
+  padding: 0.3rem;
 }
